--- a/ticket-web/public_html/index.html
+++ b/ticket-web/public_html/index.html
@@ -9,6 +9,7 @@
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
     <link href="min/custom-min.css" type="text/css" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body id="top" class="scrollspy">
 
@@ -85,7 +86,7 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 </div>
 
 <!--Work-->
-<div class="section scrollspy" id="work">
+<div class="section scrollspy" id="work" style="min-height:632px;max-height:864px;position:relative;">
     <div class="container">
         <div class="row">
             <div  class="col s12">
@@ -111,8 +112,12 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
   </div>
 <div class="input-field col s4">
           <input id="jumlah" type="text" class="validate">
-          <label for="jumlah">Jumlah</label>
+          <label for="jumlah">Amount</label>
         </div>
+        <div class="input-field col s12">
+         <button class="btn waves-effect waves-light" type="submit" name="action">Submit<i class="large material-icons">send</i>
+  </button>
+  </div>
   </form>
             </div>
         </div>
@@ -120,13 +125,24 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 </div>
 
 <!--Confrim-->
-<div id="work" class="section scrollspy" style="background-color:#6A9395">
+<div id="work" class="section scrollspy" style="background-color:white;min-height:632px;max-height:864px;position:relative;">
     <div class="container" >
         <div class="row" >
             <div  class="col s12">
                 <h1>
                 Confirm
                 </h1>
+                <form class="col s12">
+				<div class="input-field col s12">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Booking Code</label>
+        </div>
+        <div class="input-field col s12">
+         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+         <i class="large material-icons">send</i>
+  </button>
+  </div>
+        </form>
             </div>
         </div>
     </div>
@@ -136,25 +152,20 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 <div class="parallax-container">
     <div class="parallax"><img src="img/parallax1.png"></div>
 </div>
-
-<!--Team-->
-<div id="work" class="section scrollspy" style="background-color:#6A9395">
-    <div class="container" >
-        <div class="row" >
-            <div  class="col s12">
-                <h1>
-                Contact Us
-                </h1>
-            </div>
-        </div>
-    </div>
-</div>
-
+ 
 <!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
     <div class="container">  
+    <div class="row">
+    	<div class="col s12">
+        <h1 style="color:white">
+                Contact Us
+                </h1>
+        </div>
+    </div>
         <div class="row">
             <div class="col l9 s12">
+            
                  <img class="responsive-img" src="img/logo-bsm.png">
             </div>
             <div class="col l3 s12">
