--- a/ticket-web/public_html/index.html
+++ b/ticket-web/public_html/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
-    <title>Material UI One Page Theme</title>
+    <title>BSM Portal Ticket Template</title>
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
@@ -125,7 +125,7 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 </div>
 
 <!--Confrim-->
-<div id="work" class="section scrollspy" style="background-color:white;min-height:632px;max-height:864px;position:relative;">
+<div id="team" class="section scrollspy" style="background-color:white;min-height:632px;max-height:864px;position:relative;">
     <div class="container" >
         <div class="row" >
             <div  class="col s12">
@@ -138,9 +138,20 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
           <label for="last_name">Booking Code</label>
         </div>
         <div class="input-field col s12">
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">
          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
          <i class="large material-icons">send</i>
-  </button>
+  </button></a>
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
   </div>
         </form>
             </div>
@@ -150,7 +161,7 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 
 <!--Parallax-->
 <div class="parallax-container">
-    <div class="parallax"><img src="img/parallax1.png"></div>
+    <div class="parallax"><img src="img/guitar.jpg"></div>
 </div>
  
 <!--Footer-->
@@ -212,6 +223,16 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
      $(document).ready(function() {
         $('select').material_select();
     });
+	
+	$('.modal-trigger').leanModal({
+      dismissible: true, // Modal can be dismissed by clicking outside of the modal
+      opacity: .5, // Opacity of modal background
+      in_duration: 300, // Transition in duration
+      out_duration: 200, // Transition out duration
+      
+    }
+  );
   </script>
+  
     </body>
 </html>
