Konfirmasi admin selesai
Konfirmasi pembayaran di admin panel selesai. tinggal rekap data
DB ada yang aku tambahin di table transaksi

--- a/ticket-web/public_html/index.html
+++ b/ticket-web/public_html/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
-    <title>BSM Portal Ticket Template</title>
+    <title>Against AIDS</title>
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
@@ -27,7 +27,7 @@
     <nav id="nav_f" class="default_color" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-            <a href="#" id="logo-container" class="brand-logo">BSM Template</a>
+            <a href="#" id="logo-container" class="brand-logo">Against AIDS</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#booking">Booking</a></li>
@@ -51,11 +51,13 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
-            <span>I Love</span> 
+            <span> Against</span> 
             <span class="cd-words-wrapper waiting">
-                <b class="is-visible">creating</b>
+                <b class="is-visible">AIDS</b>
+                <!--
                 <b>designing</b>
                 <b>developing</b>
+                -->
             </span>
         </h1>
     </div>
@@ -70,15 +72,7 @@
                 About
                 </h1><br>
 	<p class="flow-text">
-    Burung hantu adalah kelompok burung yang merupakan anggota ordo Strigiformes. Burung ini termasuk golongan burung buas (karnivora, pemakan daging) dan merupakan hewan malam (nokturnal). Seluruhnya, terdapat sekitar 222 spesies yang telah diketahui, yang menyebar di seluruh dunia kecuali Antartika, sebagian besar Greenland, dan beberapa pulau-pulau terpencil.
-
-Di dunia barat, hewan ini dianggap simbol kebijaksanaan, tetapi di beberapa tempat di Indonesia dianggap pembawa pratanda maut, maka namanya Burung Hantu. Walau begitu tidak di semua tempat di Nusantara burung ini disebut sebagai burung hantu. Di Jawa misalnya, nama burung ini adalah darès atau manuk darès yang tidak ada konotasinya dengan maut atau hantu. Di Sulawesi Utara, burung hantu dikenal dengan nama Manguni.
-
-Burung hantu dikenal karena matanya besar dan menghadap ke depan, tak seperti umumnya jenis burung lain yang matanya menghadap ke samping. Bersama paruh yang bengkok tajam seperti paruh elang dan susunan bulu di kepala yang membentuk lingkaran wajah, tampilan "wajah" burung hantu ini demikian mengesankan dan kadang-kadang menyeramkan. Apalagi leher burung ini demikian lentur sehingga wajahnya dapat berputar 180 derajat ke belakang.
-
-Umumnya burung hantu berbulu burik, kecoklatan atau abu-abu dengan bercak-bercak hitam dan putih. Dipadukan dengan perilakunya yang kerap mematung dan tidak banyak bergerak, menjadikan burung ini tidak mudah kelihatan; begitu pun ketika tidur di siang hari di bawah lindungan daun-daun.
-
-Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapnya mencapai sekitar tiga kali panjang tubuhnya.
+    Against AIDS adalah acara tahunan dari sekumpulan mahasiswa yang mempunyai tujuan yang sama untuk melawan aids. Tujuan dari acara ini adalah untuk mengajak masyarakat untuk mengetahui dan memahami bahaya HIV/AIDS.
     </p>
             </div>
         </div>
@@ -170,7 +164,7 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
 
 <!--Parallax-->
 <div class="parallax-container">
-    <div class="parallax"><img src="img/guitar.jpg"></div>
+    <div class="parallax"><img src="img/aids.png"></div>
 </div>
  
 <!--Footer-->
@@ -181,12 +175,16 @@ Ekor burung hantu umumnya pendek, namun sayapnya besar dan lebar. Rentang sayapn
         <h1 style="color:white">
                 Contact Us
                 </h1>
+                <hr>
         </div>
     </div>
         <div class="row">
-            <div class="col l9 s12">
-            
-                 <img class="responsive-img" src="img/logo-bsm.png">
+            <div class="col l9 s12" style="color:white"><h3>Against AIDS</h3>
+            <font>
+            Alamat	: JL.Telekomunikasi, Deyeuh Kolot, Bandung 40257<br>
+Email	: iaa.itt@gmail.com<br>
+CP	: 082137241242 (Ridho Aryan R)
+            </font>
             </div>
             <div class="col l3 s12">
                 
